--- a/scss/style.css
+++ b/scss/style.css
@@ -36,8 +36,10 @@ p {
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -51,10 +53,13 @@ body {
 }
 
 .contenedorGrid {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 40rem auto auto;
-  grid-template-areas: "head head" "main   main" "footer footer";
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 40rem auto auto;
+      grid-template-rows: 40rem auto auto;
+      grid-template-areas: "head head" "main   main" "footer footer";
 }
 
 .botonContacto, .botonTienda, .botonBuscador, .botonArriba {
@@ -67,6 +72,7 @@ body {
   font-family: "Poppins", sans-serif;
   cursor: pointer;
   border: 0.2rem solid #000000;
+  -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   padding: 0.5rem 1rem;
   color: #000000;
@@ -78,9 +84,15 @@ body {
 }
 
 .botonTienda {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 50%;
   height: 3rem;
   font-size: 1.5rem;
@@ -95,7 +107,8 @@ body {
 }
 
 .botonTienda i {
-  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
   margin-right: 1rem;
 }
 
@@ -123,8 +136,12 @@ body {
   margin-top: 4rem;
   margin-bottom: 4rem;
   border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .botonArriba i {
@@ -148,8 +165,12 @@ body {
 }
 
 .headerIndex .contenedorH1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .headerIndex .contenedorH1 h1 {
@@ -159,12 +180,19 @@ body {
 .headerPaginas {
   background-position: center;
   background-size: cover;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: head;
 }
 
 .headerPaginas .contenedorH1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .headerPaginas .contenedorH1 h1 {
@@ -174,12 +202,19 @@ body {
 .headerPaginasFaqs {
   background-position: center;
   background-size: cover;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: head;
 }
 
 .headerPaginasFaqs .contenedorH1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .headerPaginasFaqs .contenedorH1 h1 {
@@ -202,7 +237,8 @@ body {
 
 .navbar .navbar-toggler .fa-bars {
   color: #ffffff;
-  transform: scale(7);
+  -webkit-transform: scale(7);
+          transform: scale(7);
   margin-top: 0.5rem;
 }
 
@@ -232,28 +268,45 @@ body {
 }
 
 .cuerpoNosotros {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: main;
   margin-top: 7rem;
   margin-bottom: 7rem;
 }
 
 .nosotros {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: auto;
   width: 80%;
   margin: 0 auto;
 }
 
 .nosotros .nosotros__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 2.5rem;
 }
 
 .nosotros .nosotros__info .informacion {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 50%;
   padding: 0 2.5rem;
 }
@@ -275,17 +328,22 @@ body {
   width: 50%;
   height: 100%;
   border-radius: 3rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   text-align: center;
   overflow: hidden;
 }
 
 .ordenUno {
-  order: 2;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
 }
 
 .ordenDos {
-  order: 1;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 
 .satisfaccionClientes {
@@ -302,8 +360,11 @@ body {
 }
 
 .satisfaccionClientes .satisfaccionClientes__opiniones {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 80%;
   margin: 0 auto;
 }
@@ -311,10 +372,17 @@ body {
 .satisfaccionClientes .satisfaccionClientes__opiniones .opinion {
   width: 40rem;
   height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0 1rem;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
 }
 
@@ -365,7 +433,8 @@ body {
 
 .cuerpoIndex .videoIndex video {
   border-radius: 1rem;
-  box-shadow: 0 0 1.5rem 0.2rem #000000;
+  -webkit-box-shadow: 0 0 1.5rem 0.2rem #000000;
+          box-shadow: 0 0 1.5rem 0.2rem #000000;
   width: 100%;
 }
 
@@ -391,6 +460,9 @@ body {
 }
 
 .cuerpoTienda {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: main;
   margin-top: 7rem;
   margin-bottom: 7rem;
@@ -426,9 +498,16 @@ body {
 }
 
 .contenedorZapatillas {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 90%;
   height: auto;
   margin: 0 auto;
@@ -441,7 +520,8 @@ body {
   height: 40rem;
   border-radius: 0rem;
   padding: 0;
-  box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
   border: 1px solid #dbdbdb;
   margin-bottom: 2.5rem;
 }
@@ -461,11 +541,14 @@ body {
 }
 
 .contenedorZapatillas .producto .producto__img .botones {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   position: absolute;
   left: 0;
   bottom: -100%;
+  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
@@ -491,6 +574,7 @@ body {
   font-size: 1.7rem;
   font-weight: 600;
   text-decoration: none;
+  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
@@ -504,6 +588,8 @@ body {
 }
 
 .contenedorZapatillas .producto .producto__info .calificacion {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0.5rem 0 1.5rem 0;
   font-family: "Poppins", sans-serif;
@@ -519,8 +605,12 @@ body {
 }
 
 .pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 5rem;
 }
 
@@ -559,71 +649,80 @@ body {
 }
 
 .cuerpoFaqs {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: main;
   margin-top: 0;
   margin-bottom: 7rem;
 }
 
-.cuerpoFaqs .navegacionFaqsMovile {
-  margin: 0;
-  padding-top: 4rem;
-  margin: 0 auto;
-}
-
-.cuerpoFaqs .navegacionFaqsMovile .carousel {
-  width: 30rem;
-  height: 20rem;
+.cuerpoFaqs .navegacionFaqs {
+  background-color: #ffffff;
+  width: 80%;
+  height: auto;
+  border-radius: 0rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0 auto;
   margin-bottom: 7rem;
-  text-align: center;
+  padding-top: 7rem;
 }
 
-.cuerpoFaqs .navegacionFaqsMovile .carousel .navegacionFaqsMovile__logo {
+.cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 15rem;
-  margin: 0 auto;
-  margin-top: 2.5rem;
   margin-bottom: 2.5rem;
+  -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
 
-.cuerpoFaqs .navegacionFaqsMovile .carousel .navegacionFaqsMovile__logo:last-child {
+.cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo:last-child {
   margin-bottom: 0rem;
 }
 
-.cuerpoFaqs .navegacionFaqsMovile .carousel .navegacionFaqsMovile__logo i {
+.cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo i {
   font-size: 6rem;
   color: #a67453;
   margin-bottom: 1rem;
+  -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
 
-.cuerpoFaqs .navegacionFaqsMovile .carousel .navegacionFaqsMovile__logo a {
+.cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo a {
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
   font-weight: 700;
   text-decoration: none;
   text-align: center;
   color: #000000;
+  -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
 
-.cuerpoFaqs .navegacionFaqsMovile .carousel .navegacionFaqsMovile__logo:hover i {
-  transform: scale(1.1);
-}
-
-.cuerpoFaqs .navegacionFaqsMovile .carousel .carousel-control-prev {
-  transform: scale(1.3);
-}
-
-.cuerpoFaqs .navegacionFaqsMovile .carousel .carousel-control-next {
-  transform: scale(1.3);
-}
-
-.cuerpoFaqs .navegacionFaqs {
-  display: none;
+.cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo:hover i {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .cuerpoFaqs .preguntas {
@@ -680,6 +779,9 @@ body {
 }
 
 .cuerpoContacto {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: main;
   margin-top: 7rem;
   margin-bottom: 7rem;
@@ -710,8 +812,13 @@ body {
 }
 
 .cuerpoContacto .formulario .campo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .cuerpoContacto .formulario .campo .campo__texto {
@@ -741,9 +848,15 @@ body {
 }
 
 .cuerpoContacto .formulario .checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 5rem;
 }
 
@@ -755,12 +868,17 @@ body {
 }
 
 .cuerpoContacto .formulario .checkbox .checkbox__tilde {
-  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 .cuerpoContacto .formulario .contenedorBoton {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .contenedorWhatsapp {
@@ -772,11 +890,13 @@ body {
   bottom: 3rem;
   right: 1.2rem;
   padding: .8rem;
+  -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
 
 .contenedorWhatsapp:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .contenedorWhatsapp .botonWhatsapp {
@@ -786,29 +906,39 @@ body {
 .contenedorTitulo {
   width: 95%;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .contenedorTitulo .titulo {
   text-align: center;
   margin: 0 auto;
-  flex: 60%;
+  -webkit-box-flex: 60%;
+      -ms-flex: 60%;
+          flex: 60%;
 }
 
 .contenedorTitulo .tituloDos {
   text-align: center;
   margin: 0 auto;
-  flex: 20%;
+  -webkit-box-flex: 20%;
+      -ms-flex: 20%;
+          flex: 20%;
 }
 
 .contenedorTitulo .antes,
 .contenedorTitulo .despues {
-  flex: 25%;
+  -webkit-box-flex: 25%;
+      -ms-flex: 25%;
+          flex: 25%;
 }
 
 .contenedorTitulo .antesDos,
 .contenedorTitulo .despuesDos {
-  flex: 35%;
+  -webkit-box-flex: 35%;
+      -ms-flex: 35%;
+          flex: 35%;
 }
 
 .contenedorTitulo .linea {
@@ -827,6 +957,9 @@ body {
 }
 
 .pie {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: footer;
   background-color: #000000;
   color: #ffffff;
@@ -873,8 +1006,10 @@ body {
 .subrayadoEnlace {
   display: inline-block;
   vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: relative;
   overflow: hidden;
 }
@@ -888,9 +1023,12 @@ body {
   bottom: 0;
   background: #ffffff;
   height: 3px;
+  -webkit-transition-property: left, right;
   transition-property: left, right;
-  transition-duration: 0.3s;
-  transition-timing-function: ease-out;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+          transition-timing-function: ease-out;
 }
 
 .subrayadoEnlace:hover:before,
@@ -901,59 +1039,100 @@ body {
 }
 
 .aparicionTexto {
-  animation: aparicionTexto 1s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+  -webkit-animation: aparicionTexto 1s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+          animation: aparicionTexto 1s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 }
 
-@keyframes aparicionTexto {
+@-webkit-keyframes aparicionTexto {
   0% {
     letter-spacing: 5rem;
-    transform: translateZ(400px);
+    -webkit-transform: translateZ(400px);
+            transform: translateZ(400px);
     opacity: 0;
   }
   40% {
     opacity: 0.6;
   }
   100% {
-    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+
+@keyframes aparicionTexto {
+  0% {
+    letter-spacing: 5rem;
+    -webkit-transform: translateZ(400px);
+            transform: translateZ(400px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
     opacity: 1;
   }
 }
 
 .agrandarTarjeta {
+  -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
 
 .agrandarTarjeta:hover {
-  transform: translateY(-0.4rem);
-  box-shadow: 0rem 0rem 3rem rgba(0, 0, 0, 0.2);
+  -webkit-transform: translateY(-0.4rem);
+          transform: translateY(-0.4rem);
+  -webkit-box-shadow: 0rem 0rem 3rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0rem 0rem 3rem rgba(0, 0, 0, 0.2);
 }
 
 .sombraWhatsapp {
-  animation: sombraWhatsapp 1.2s infinite;
+  -webkit-animation: sombraWhatsapp 1.2s infinite;
+          animation: sombraWhatsapp 1.2s infinite;
+}
+
+@-webkit-keyframes sombraWhatsapp {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.85);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.85);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 1.2rem rgba(0, 0, 0, 0);
+            box-shadow: 0 0 0 1.2rem rgba(0, 0, 0, 0);
+  }
 }
 
 @keyframes sombraWhatsapp {
   0% {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.85);
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.85);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.85);
   }
   100% {
-    box-shadow: 0 0 0 1.2rem rgba(0, 0, 0, 0);
+    -webkit-box-shadow: 0 0 0 1.2rem rgba(0, 0, 0, 0);
+            box-shadow: 0 0 0 1.2rem rgba(0, 0, 0, 0);
   }
 }
 
 .efectoIcono {
+  -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
 
 .efectoIcono:hover {
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 @media (min-width: 991px) {
   .contenedorGrid {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 40rem auto 10rem;
-    grid-template-areas: "head head head head" "main   main   main   main" "footer footer footer footer";
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: 40rem auto 10rem;
+        grid-template-rows: 40rem auto 10rem;
+        grid-template-areas: "head head head head" "main   main   main   main" "footer footer footer footer";
   }
   .buscador {
     width: 18rem;
@@ -965,9 +1144,13 @@ body {
     width: 80%;
   }
   .contenedorZapatillas {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     width: 90%;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     margin-top: 5rem;
   }
   .contenedorZapatillas .producto {
@@ -976,48 +1159,17 @@ body {
     height: auto;
     border-radius: 0rem;
   }
-  .cuerpoFaqs .navegacionFaqsMovile {
-    display: none;
-  }
   .cuerpoFaqs .navegacionFaqs {
-    background-color: #ffffff;
-    width: 80%;
-    height: auto;
-    border-radius: 0rem;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    margin-bottom: 7rem;
-    padding-top: 7rem;
-  }
-  .cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 15rem;
-    margin-bottom: 2.5rem;
-    transition: all 300ms ease;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo:last-child {
-    margin-bottom: 0rem;
-  }
-  .cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo i {
-    font-size: 6rem;
-    color: #a67453;
-    margin-bottom: 1rem;
-    transition: all 300ms ease;
-  }
-  .cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo a {
-    font-family: "Poppins", sans-serif;
-    font-size: 2rem;
-    font-weight: 700;
-    text-decoration: none;
-    text-align: center;
-    color: #000000;
-    transition: all 300ms ease;
-  }
-  .cuerpoFaqs .navegacionFaqs .navegacionFaqs__logo:hover i {
-    transform: scale(1.1);
+    margin-bottom: 2.5rem;
   }
   .cuerpoFaqs .preguntas {
     width: 80%;
@@ -1026,11 +1178,15 @@ body {
     width: 70%;
   }
   .contenedorTitulo .titulo {
-    flex: 50%;
+    -webkit-box-flex: 50%;
+        -ms-flex: 50%;
+            flex: 50%;
   }
   .contenedorTitulo .antes,
   .contenedorTitulo .despues {
-    flex: 25%;
+    -webkit-box-flex: 25%;
+        -ms-flex: 25%;
+            flex: 25%;
   }
   .cuerpoContacto .formulario {
     width: 50%;
