--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,88 +238,74 @@ body {
   margin-bottom: 7rem;
 }
 
-.nosotros {
+.cuerpoNosotros .nosotros {
   display: flex;
   flex-direction: column;
   height: auto;
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
+  margin-bottom: 7rem;
 }
 
-.nosotros .nosotros__info {
-  display: flex;
-  margin-bottom: 2.5rem;
-}
-
-.nosotros .nosotros__info .informacion {
+.cuerpoNosotros .nosotros .nosotros__info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  width: 50%;
-  padding: 0 2.5rem;
-}
-
-.nosotros .nosotros__info .informacion h3 {
-  width: 100%;
   text-align: center;
-  margin-bottom: 2.5rem;
+  margin-bottom: 5rem;
 }
 
-.nosotros .nosotros__info .informacion p {
-  width: 90%;
-  margin: 0 auto;
-  text-align: center;
-  line-height: 120%;
+.cuerpoNosotros .nosotros .nosotros__info:last-child {
+  margin-bottom: 0;
 }
 
-.nosotros .nosotros__info .imagen {
-  width: 50%;
-  height: 100%;
-  border-radius: 3rem;
-  object-fit: cover;
-  text-align: center;
-  overflow: hidden;
+.cuerpoNosotros .nosotros .nosotros__info .informacion h3 {
+  margin-bottom: 1rem;
+  text-decoration: underline;
 }
 
-.ordenUno {
-  order: 2;
+.cuerpoNosotros .nosotros .nosotros__info .imagen img {
+  border-radius: 2rem;
+  margin-top: 1rem;
+  box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
+  border: 1px solid #dbdbdb;
 }
 
-.ordenDos {
-  order: 1;
-}
-
-.satisfaccionClientes {
+.cuerpoNosotros .infoClientes {
   background-color: #f7e4e4;
   width: 100%;
   height: auto;
-  padding: 5rem 0;
-  margin-top: 7rem;
   border-radius: 0.5rem;
-}
-
-.satisfaccionClientes .satisfaccionClientes__clientesFelices {
+  padding: 5rem 0;
   text-align: center;
+  margin-bottom: 5rem;
 }
 
-.satisfaccionClientes .satisfaccionClientes__opiniones {
-  display: flex;
-  justify-content: space-around;
-  width: 80%;
-  margin: 0 auto;
+.cuerpoNosotros .infoClientes .contenedorTitulo {
+  margin-bottom: 5rem;
 }
 
-.satisfaccionClientes .satisfaccionClientes__opiniones .opinion {
-  width: 40rem;
-  height: auto;
+.cuerpoNosotros .infoClientes .clientesFelices {
   display: flex;
-  margin: 0 1rem;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cuerpoNosotros .infoClientes .clientesFelices .opinion {
+  width: 25rem;
+  height: 23rem;
+  display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin: 0 1em;
+  margin-bottom: 2.5rem;
 }
 
-.satisfaccionClientes .satisfaccionClientes__opiniones .opinion img {
+.cuerpoNosotros .infoClientes .clientesFelices .opinion:last-child {
+  margin-bottom: 0;
+}
+
+.cuerpoNosotros .infoClientes .clientesFelices .opinion img {
   width: 8rem;
   height: 8rem;
   border-radius: 50%;
@@ -327,31 +313,49 @@ body {
   margin-bottom: 1.5rem;
 }
 
-.satisfaccionClientes .satisfaccionClientes__opiniones .opinion p {
+.cuerpoNosotros .infoClientes .clientesFelices .opinion p {
   font-size: 1.3rem;
 }
 
-.satisfaccionClientes .satisfaccionClientes__opiniones .opinion p span {
+.cuerpoNosotros .infoClientes .clientesFelices .opinion p span {
   font-size: 1.4rem;
   font-weight: 800;
 }
 
-.clientesFelices__titulo::after,
-.clientesFelices__titulo::before {
-  content: '';
-  position: absolute;
-  width: 29.8rem;
-  height: 0.10rem;
-  background-color: currentColor;
-  top: 2rem;
+.cuerpoNosotros .infoUbicacion {
+  background-color: #ffffff;
+  width: 100%;
+  height: auto;
+  border-radius: 0;
+  text-align: center;
 }
 
-.clientesFelices__titulo::after {
-  right: -34.8rem;
+.cuerpoNosotros .infoUbicacion .contenedorTitulo {
+  margin-bottom: 2.5rem;
 }
 
-.clientesFelices__titulo::before {
-  left: -34.8rem;
+.cuerpoNosotros .infoUbicacion p {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.cuerpoNosotros .infoUbicacion .ubicacion {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.cuerpoNosotros .infoUbicacion .ubicacion .ubicacion__local .local {
+  width: 100%;
+  object-fit: contain;
+}
+
+.cuerpoNosotros .infoUbicacion .ubicacion .ubicacion__mapa {
+  width: 100%;
+  height: 30rem;
+  box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
+  border: 1px solid #dbdbdb;
 }
 
 .cuerpoIndex {
@@ -1022,6 +1026,51 @@ body {
   }
   .cuerpoFaqs .preguntas {
     width: 80%;
+  }
+  .cuerpoNosotros .nosotros .nosotros__info {
+    width: 80%;
+    margin: 0 auto;
+    flex-direction: row;
+    text-align: center;
+    margin-bottom: 5rem;
+  }
+  .cuerpoNosotros .nosotros .nosotros__info .informacion {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 2.5rem;
+  }
+  .cuerpoNosotros .nosotros .nosotros__info .informacion h3 {
+    margin-bottom: 2.5rem;
+    text-decoration: underline;
+  }
+  .cuerpoNosotros .nosotros .nosotros__info .ordenUno {
+    order: 2;
+  }
+  .cuerpoNosotros .nosotros .nosotros__info .ordenDos {
+    order: 1;
+  }
+  .cuerpoNosotros .infoClientes .clientesFelices {
+    flex-direction: row;
+    width: 80%;
+    margin: 0 auto;
+    justify-content: space-between;
+  }
+  .cuerpoNosotros .infoUbicacion p {
+    width: 80%;
+  }
+  .cuerpoNosotros .infoUbicacion .ubicacion {
+    flex-direction: row;
+    justify-content: space-around;
+    height: 30rem;
+    margin-top: 5rem;
+  }
+  .cuerpoNosotros .infoUbicacion .ubicacion .ubicacion__local {
+    width: 50%;
+  }
+  .cuerpoNosotros .infoUbicacion .ubicacion .ubicacion__mapa {
+    width: 40%;
   }
   .contenedorTitulo {
     width: 70%;
