--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,125 +1,170 @@
-// Main Nosotros
+
+
+//     .nosotros__info {
+//         display: flex;
+//         margin-bottom: 2.5rem;
+//         .informacion {
+//             display: flex;
+//             flex-direction: column;
+//             justify-content: center;
+//             width: 50%;
+//             padding: 0 2.5rem;
+
+//             h3 {
+//                 width: 100%;
+//                 text-align: center;
+//                 margin-bottom: 2.5rem;
+//             }
+
+//             p {
+//                 width: 90%;
+//                 margin: 0 auto;
+//                 text-align: center;
+//                 line-height: 120%;
+//             }
+//         }
+
+//         .imagen {
+//             width: 50%;
+//             height: 100%;
+//             border-radius: 3rem;
+//             object-fit: cover;
+//             text-align: center;
+//             overflow: hidden;
+//         }
+//     }
+// }
+
+// .ordenUno {
+//     order: 2;
+// }
+
+// .ordenDos {
+//     order: 1;
+// }
+
+
+
+
 .cuerpoNosotros {
     grid-area: main;
     margin-top: 7rem;
     margin-bottom: 7rem;
-}
-
-.nosotros {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    width: 80%;
-    margin: 0 auto;
-
-    .nosotros__info {
+    .nosotros {
         display: flex;
-        margin-bottom: 2.5rem;
-
-        .informacion {
+        flex-direction: column;
+        height: auto;
+        width: 95%;
+        margin: 0 auto;
+        margin-bottom: 7rem;
+        .nosotros__info {
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            width: 50%;
-            padding: 0 2.5rem;
-
-            h3 {
-                width: 100%;
-                text-align: center;
-                margin-bottom: 2.5rem;
-            }
-
-            p {
-                width: 90%;
-                margin: 0 auto;
-                text-align: center;
-                line-height: 120%;
-            }
-        }
-
-        .imagen {
-            width: 50%;
-            height: 100%;
-            border-radius: 3rem;
-            object-fit: cover;
             text-align: center;
-            overflow: hidden;
+            margin-bottom: 5rem;
+            &:last-child {
+                margin-bottom: 0;
+            }
+            .informacion {
+                h3 {
+                    margin-bottom: 1rem;
+                    text-decoration: underline;
+                }
+            }
+            .imagen {
+                img {
+                    border-radius: 2rem;
+                    margin-top: 1rem;
+                    box-shadow: 0rem 0rem 2rem $colorSombra;
+                    border: 1px solid $colorBordeProducto;
+                }
+            }
+            
         }
     }
-}
 
-.ordenUno {
-    order: 2;
-}
 
-.ordenDos {
-    order: 1;
-}
-
-.satisfaccionClientes {
-    background-color: $colorFondoDos;
-    width: 100%;
-    height: auto;
-    padding: 5rem 0;
-    margin-top: 7rem;
-    border-radius: 0.5rem;
-
-    .satisfaccionClientes__clientesFelices {
+    .infoClientes {
+        @include propiedadesGenerales ($colorFondoDos, 100%, auto, 0.5rem);
+        padding: 5rem 0;
         text-align: center;
-    }
-
-    .satisfaccionClientes__opiniones {
-        display: flex;
-        justify-content: space-around;
-        width: 80%;
-        margin: 0 auto;
-
-        .opinion {
-            width: 40rem;
-            height: auto;
+        margin-bottom: 5rem;
+        .contenedorTitulo{
+            margin-bottom: 5rem;
+        }
+        .clientesFelices {
             display: flex;
-            margin: 0 1rem;
             flex-direction: column;
             align-items: center;
-            text-align: center;
-
-            img {
-                width: 8rem;
-                height: 8rem;
-                border-radius: 50%;
-                overflow: hidden;
-                margin-bottom: 1.5rem;
-            }
-
-            p {
-                font-size: 1.3rem;
-
-                span {
-                    font-size: 1.4rem;
-                    font-weight: 800;
+            .opinion {
+                width: 25rem;
+                height: 23rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                margin: 0 1em;
+                margin-bottom: 2.5rem;
+                &:last-child {
+                    margin-bottom: 0;
+                }
+                img {
+                    width: 8rem;
+                    height: 8rem;
+                    border-radius: 50%;
+                    overflow: hidden;
+                    margin-bottom: 1.5rem;
+                }
+                p {
+                    font-size: 1.3rem;
+                    span {
+                        font-size: 1.4rem;
+                        font-weight: 800;
+                    }
                 }
             }
         }
     }
+    .infoUbicacion {
+        @include propiedadesGenerales ($colorFondo, 100%, auto, 0);
+        text-align: center;
+        .contenedorTitulo{
+            margin-bottom: 2.5rem;
+        }
+        p {
+            width: 90%;
+            margin: 0 auto;
+        }
+        .ubicacion {
+            display: flex;
+            flex-direction: column;
+            width: 90%;
+            margin: 0 auto;
+            
+            .ubicacion__local {
+                .local {
+                    width: 100%;               
+                    object-fit: contain;
+                    
+                }
+            }
+            .ubicacion__mapa {
+                width: 100%;
+                height: 30rem;
+                box-shadow: 0rem 0rem 2rem $colorSombra;
+                border: 1px solid $colorBordeProducto;
+                
+            }
+        }
+    }
 }
 
-.clientesFelices__titulo::after,
-.clientesFelices__titulo::before {
-    content: '';
-    position: absolute;
-    width: 29.8rem;
-    height: 0.10rem;
-    background-color: currentColor;
-    top: 2rem;
-}
 
-.clientesFelices__titulo::after {
-    right: -34.8rem;
-}
 
-.clientesFelices__titulo::before {
-    left: -34.8rem;
-}
+
+
+
+
 
 
 
