--- a/scss/_mediaQuery.scss
+++ b/scss/_mediaQuery.scss
@@ -259,6 +259,65 @@
             width: 80%;
         }
     }
+    
+    // Main Nosotros
+    .cuerpoNosotros {
+        .nosotros {
+            .nosotros__info {
+                width: 80%;
+                margin: 0 auto;
+                flex-direction: row;
+                text-align: center;
+                margin-bottom: 5rem;
+                .informacion {
+                    width: 50%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    padding: 0 2.5rem;
+                    h3 {
+                        margin-bottom: 2.5rem;
+                        text-decoration: underline;
+                    }
+                }
+                .ordenUno {
+                    order: 2;
+                }
+                .ordenDos {
+                    order: 1;
+                }
+                
+            }
+        }
+        .infoClientes {
+            .clientesFelices {
+                flex-direction: row;
+                width: 80%;
+                margin: 0 auto;
+                justify-content: space-between;
+                
+            }
+        }
+        .infoUbicacion {
+            p {
+                width: 80%;
+            }
+            .ubicacion {
+                flex-direction: row;
+                justify-content: space-around;
+                height: 30rem;
+                margin-top: 5rem;
+                .ubicacion__local {
+                    width: 50%;
+                }
+                .ubicacion__mapa {
+                    width: 40%;
+                }
+            }
+        }
+    }
+
+    
     // Decoracion Titulos
     .contenedorTitulo{
         width: 70%;
@@ -271,11 +330,11 @@
         }
     }
     // Main Contacto
-.cuerpoContacto {
-    .formulario {
-        width: 50%;
+    .cuerpoContacto {
+        .formulario {
+            width: 50%;
+        }
     }
-}
     // Footer
     .pie {
         .redes {
