--- a/scss/_mediaQuery.scss
+++ b/scss/_mediaQuery.scss
@@ -1,16 +1,19 @@
 @media (min-width: 991px) {
+
     // Grid
     .contenedorGrid {
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 40rem auto 10rem;
         grid-template-areas: "head head head head"
-                             "main   main   main   main"
-                             "footer footer footer footer";
+            "main   main   main   main"
+            "footer footer footer footer";
     }
+
     // Header
     .buscador {
         width: 18rem;
     }
+
     .headerPaginasFaqs {
         .contenedorH1 {
             h1 {
@@ -18,6 +21,7 @@
             }
         }
     }
+
     // Main Tienda
     .cuerpoTienda {
         .infoTienda {
@@ -26,15 +30,18 @@
             }
         }
     }
+
     .contenedorZapatillas {
         flex-direction: row;
         width: 90%;
         justify-content: space-around;
         margin-top: 5rem;
-        .producto{
+
+        .producto {
             @include propiedadesGenerales ($colorFondo, 25rem, auto, 0rem);
         }
     }
+
     // Main Nosotros
     .cuerpoNosotros {
         .nosotros {
@@ -44,32 +51,39 @@
                 flex-direction: row;
                 text-align: center;
                 margin-bottom: 2.5rem;
+
                 .informacion {
                     width: 50%;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     padding: 0 2.5rem;
+
                     h3 {
                         margin-bottom: 2.5rem;
-                        
+
                     }
                 }
+
                 .imagen {
                     width: 50%;
                 }
+
                 .ordenUno {
                     order: 2;
                 }
+
                 .ordenDos {
                     order: 1;
                 }
             }
         }
+
         .infoClientes {
             .clientesFelicesMovile {
                 display: none;
             }
+
             .clientesFelices {
                 display: flex;
                 flex-direction: row;
@@ -77,6 +91,7 @@
                 justify-content: space-between;
                 width: 80%;
                 margin: 0 auto;
+
                 .opinion {
                     width: 25rem;
                     height: 23rem;
@@ -86,9 +101,11 @@
                     text-align: center;
                     margin: 0 1em;
                     margin-bottom: 2.5rem;
+
                     &:last-child {
-                        margin-bottom: 0;
+                        margin-bottom: 2.5rem;
                     }
+
                     img {
                         width: 8rem;
                         height: 8rem;
@@ -96,8 +113,10 @@
                         overflow: hidden;
                         margin-bottom: 1.5rem;
                     }
+
                     p {
                         font-size: 1.3rem;
+
                         span {
                             font-size: 1.4rem;
                             font-weight: 800;
@@ -106,29 +125,35 @@
                 }
             }
         }
+
         .infoUbicacion {
             p {
                 width: 80%;
             }
+
             .ubicacion {
                 flex-direction: row;
                 justify-content: space-around;
                 height: 30rem;
                 margin-top: 5rem;
+
                 .ubicacion__local {
                     width: 50%;
                 }
+
                 .ubicacion__mapa {
                     width: 40%;
                 }
             }
         }
     }
+
     // Main Preguntas Frecuentes
     .cuerpoFaqs {
         .navegacionFaqsMovile {
             display: none;
         }
+
         .navegacionFaqs {
             @include propiedadesGenerales ($colorFondo, 80%, auto, 0rem);
             display: flex;
@@ -136,6 +161,7 @@
             margin: 0 auto;
             margin-bottom: 7rem;
             padding-top: 7rem;
+
             .navegacionFaqs__logo {
                 display: flex;
                 flex-direction: column;
@@ -143,15 +169,18 @@
                 width: 15rem;
                 margin-bottom: 2.5rem;
                 transition: all 300ms ease;
+
                 &:last-child {
                     margin-bottom: 0rem;
                 }
+
                 i {
                     font-size: 6rem;
                     color: $colorHover;
                     margin-bottom: 1rem;
                     transition: all 300ms ease;
                 }
+
                 a {
                     font-family: $tipoFuentePrincipal;
                     font-size: 2rem;
@@ -161,32 +190,39 @@
                     color: $colorPrincipal;
                     transition: all 300ms ease;
                 }
+
                 &:hover i {
                     transform: scale(1.1);
                 }
             }
         }
+
         .preguntas {
             width: 80%;
         }
     }
+
     // Main Contacto
     .cuerpoContacto {
         .formulario {
             width: 50%;
         }
     }
+
     // Decoracion Titulos
-    .contenedorTitulo{
+    .contenedorTitulo {
         width: 70%;
-        .titulo{
+
+        .titulo {
             flex: 50%;
         }
+
         .antes,
         .despues {
             flex: 25%;
         }
     }
+
     // Footer
     .pie {
         .redes {
@@ -194,35 +230,26 @@
             border-left: none;
             border-top: none;
             border-bottom: none;
+            height: 8rem;
+            padding-top: 2rem;
         }
+
+        .navFooter {
+            height: 8rem;
+            padding-top: 2.5rem;
+
+            a {
+                padding: 0;
+            }
+        }
+
         .copyright {
             border-left: 0.15rem solid $colorFondo;
             border-right: none;
             border-top: none;
             border-bottom: none;
-            
+            height: 8rem;
+            padding-top: 2rem;
         }
     }
 }
-
-
-
-
- 
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-    
-    
-
-
-
