--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @import"_variables";
 @import "_reseteo";
 @import "_grid";
-@import "_mixin";
+@import "_mixins";
 @import "_botones";
 @import "_header";
 @import "_main";
