Modifique contacto.html movile

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -475,6 +475,7 @@
         @include propiedadesGenerales ($colorFondoDos, 100%, auto, 0.5rem);
         padding: 5rem 0;
         text-align: center;
+        margin: 0 auto;
         margin-bottom: 5rem;
 
         .contenedorTitulo {
