--- a/scss/_mediaQuery.scss
+++ b/scss/_mediaQuery.scss
@@ -204,6 +204,11 @@
 
     // Main Contacto
     .cuerpoContacto {
+        .infoContacto {
+            p {
+                width: 80%;
+            }
+        }
         .formulario {
             width: 50%;
         }
